<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inform_manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tittle">通知管家</string>
    <string name="password">密码：</string>
    <string name="account">账户：</string>
    <string name="remember_pwd">记住密码</string>
    <string name="Login">登   陆</string>
    <string name="register">注册新用户</string>
    <string name="forgetpsw">忘记密码？</string>
    <string name="hintusername">账户：</string>
    <string name="hintuserpwd">密码：</string>
    <string name="create">注  册</string>
    <string name="hintemail">邮箱：</string>
    <string name="hintyam">输入验证码：</string>
    <string name="sent_btn">发送验证码</string>
    <string name="newpwd">输入新密码：</string>
    <string name="sure_btn">确  定</string>

</resources>
