<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bj"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_tittle_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/tittle"
            android:textColor="#ffffff"
            android:textSize="50sp" />

        <com.example.inform_manager.RoundImageView
            android:id="@+id/roundImage_two_border"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@id/tv_tittle_id"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@drawable/user_head"
            imagecontrol:border_inside_color="#fff7f2e9"
            imagecontrol:border_outside_color="#ecfc68"
            imagecontrol:border_thickness="2dp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/roundImage_two_border"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_name"
            android:hint="@string/account" />

        <EditText
            android:id="@+id/et_userpassword"
            android:layout_marginTop="0.2dp"
            android:inputType="textPassword" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_username"
            android:background="@drawable/et_password"
            android:hint="@string/password" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@id/cb_remember"
            android:layout_width="150.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/remember_pwd" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_login_shap"
            android:text="@string/Login"
            android:textColor="#ffffff" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
         >

        <Button
            android:id="@+id/btn_forgetpsw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="#00000000"
            android:text="@string/forgetpsw"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btn_register"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/register"
            android:textColor="#000000" />
    </RelativeLayout>

</LinearLayout>